--- a/KaggleChallenge1/Challenge1_0.75837.ipynb
+++ b/KaggleChallenge1/Challenge1_0.75837.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 505,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 296,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 297,
+     "execution_count": 507,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 509,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 510,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 516,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.321677Z",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "       'C148'], dtype=object)"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 517,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "U         481  206"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 520,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "U          70.014556  29.985444"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 482,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "4           Mr  Group 4  "
       ]
      },
-     "execution_count": 316,
+     "execution_count": 484,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.387429Z",
@@ -1142,7 +1142,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 486,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.419611Z",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.456937Z",
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.481921Z",
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.507642Z",
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.538156Z",
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 493,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "array([1, 0, 3, 4, 2, 5, 8])"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 495,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.560305Z",
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.722111Z",
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.730892Z",
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.762348Z",
@@ -1492,7 +1492,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 499,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.790159Z",
@@ -1741,11 +1741,7 @@
     }
    ],
    "source": [
-    "best_model = SVC(\n",
-    "        kernel=\"rbf\",  \n",
-    "        probability=True,\n",
-    "        random_state=42,\n",
-    "    )\n",
+    "best_model = XGBClassifier(eval_metric='logloss', random_state=42, n_jobs=-1)\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "y_val_pred = best_model.predict(X_val)\n",
@@ -1759,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:06.926955Z",
@@ -1810,7 +1806,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submission file 'submission.csv' created.\n"
+      "Submission file 'submission2.csv' created.\n"
      ]
     }
    ],
@@ -1828,9 +1824,9 @@
     "})\n",
     "\n",
     "# Export to CSV\n",
-    "submission.to_csv(\"submission.csv\", index=False)\n",
+    "submission.to_csv(\"submission2.csv\", index=False)\n",
     "\n",
-    "print(\"Submission file 'submission.csv' created.\")"
+    "print(\"Submission file 'submission2.csv' created.\")"
    ]
   }
  ],
