--- a/KaggleChallenge1/Challenge1_0.77511.ipynb
+++ b/KaggleChallenge1/Challenge1_0.77511.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 205,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 210,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.321677Z",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "       'C148'], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "U         481  206"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "U          70.014556  29.985444"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "4  Group 4  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 220,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.387429Z",
@@ -953,7 +953,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 221,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.419611Z",
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 222,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.456937Z",
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 223,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.481921Z",
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 224,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.507642Z",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 225,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.538156Z",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "array([1, 0, 3, 4, 2, 5, 8])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 230,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.560305Z",
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 231,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.722111Z",
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 232,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.730892Z",
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 233,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.762348Z",
@@ -1296,7 +1296,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 235,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.790159Z",
@@ -1362,8 +1362,13 @@
       "------------------------------\n",
       "XGBoost Results:\n",
       "  Accuracy: 0.7989\n",
-      "  F1 Score: 0.7313\n",
-      "  ROC AUC:  0.8233\n",
+      "  F1 Score: 0.7097\n",
+      "  ROC AUC:  0.8182\n",
+      "------------------------------\n",
+      "SVC Results:\n",
+      "  Accuracy: 0.8156\n",
+      "  F1 Score: 0.7402\n",
+      "  ROC AUC:  0.8411\n",
       "------------------------------\n"
      ]
     }
@@ -1372,12 +1377,33 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
     "\n",
     "models = {\n",
     "    'Logistic Regression': LogisticRegression(random_state=42, max_iter=1000),\n",
     "    'Random Forest': RandomForestClassifier(random_state=42, n_jobs=-1, n_estimators=200),\n",
-    "    'XGBoost': XGBClassifier(eval_metric='logloss', random_state=42, n_jobs=-1),\n",
+    "    'XGBoost': XGBClassifier(\n",
+    "                n_estimators=600,          # nhiều cây hơn, học mượt hơn\n",
+    "                learning_rate=0.02,        # giảm tốc độ học (ổn định hơn)\n",
+    "                max_depth=3,               # tránh overfit\n",
+    "                subsample=0.8,             # chọn ngẫu nhiên 80% mẫu mỗi cây\n",
+    "                colsample_bytree=0.8,      # chọn ngẫu nhiên 80% feature mỗi cây\n",
+    "                min_child_weight=1,        # cho phép chia nhỏ nếu có ít mẫu\n",
+    "                gamma=0,                   # độ phạt chia node, giữ 0 hoặc nhỏ\n",
+    "                reg_alpha=0.1,             # L1 regularization nhẹ\n",
+    "                reg_lambda=1,              # L2 regularization mặc định\n",
+    "                eval_metric='logloss',\n",
+    "                random_state=42,\n",
+    "                n_jobs=-1,\n",
+    "            ),\n",
+    "    \"SVC\": SVC(\n",
+    "        kernel=\"rbf\",     \n",
+    "        probability=True,\n",
+    "        random_state=42,\n",
+    "        C=1.0,\n",
+    "        gamma=\"scale\"\n",
+    "    ),\n",
     "}\n",
     "\n",
     "for name, model in models.items():\n",
@@ -1398,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 236,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:05.952651Z",
@@ -1432,17 +1458,23 @@
       "2    0\n",
       "3    0\n",
       "4    1\n",
-      "5    0\n",
+      "5    1\n",
       "6    1\n",
-      "7    1\n",
-      "8    1\n",
+      "7    0\n",
+      "8    0\n",
       "9    0\n",
       "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "best_model = XGBClassifier(eval_metric='logloss', random_state=42, n_jobs=-1)\n",
+    "best_model = SVC(\n",
+    "        kernel=\"rbf\",     \n",
+    "        probability=True,\n",
+    "        random_state=42,\n",
+    "        C=1.0,\n",
+    "        gamma=\"scale\"\n",
+    "    )\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "y_val_pred = best_model.predict(X_val)\n",
@@ -1456,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1467,16 +1499,16 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.82      0.85      0.84       110\n",
-      "           1       0.75      0.71      0.73        69\n",
+      "           0       0.82      0.90      0.86       110\n",
+      "           1       0.81      0.68      0.74        69\n",
       "\n",
-      "    accuracy                           0.80       179\n",
-      "   macro avg       0.79      0.78      0.79       179\n",
-      "weighted avg       0.80      0.80      0.80       179\n",
+      "    accuracy                           0.82       179\n",
+      "   macro avg       0.81      0.79      0.80       179\n",
+      "weighted avg       0.82      0.82      0.81       179\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[94 16]\n",
-      " [20 49]]\n"
+      "[[99 11]\n",
+      " [22 47]]\n"
      ]
     }
    ],
@@ -1492,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 238,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:06.926955Z",
