--- a/KaggleChallenge1/Challenge1_5h20.ipynb
+++ b/KaggleChallenge1/Challenge1_5h20.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 97,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_22508\\2432131351.py:2: FutureWarning: \n",
+      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_32544\\2432131351.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,14 +483,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_22508\\3021317157.py:2: FutureWarning: \n",
+      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_32544\\3021317157.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 108,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.321677Z",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "       'C148'], dtype=object)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "U         481  206"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
        "U          70.014556  29.985444"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "4           Mr  Group 4  "
       ]
      },
-     "execution_count": 250,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 120,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.387429Z",
@@ -1142,7 +1142,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 121,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.419611Z",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,14 +1188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_22508\\1326782431.py:2: FutureWarning: \n",
+      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_32544\\1326782431.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,14 +1286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_22508\\1442379951.py:2: FutureWarning: \n",
+      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_32544\\1442379951.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 128,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.456937Z",
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 129,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.481921Z",
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 130,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.507642Z",
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 131,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.538156Z",
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "        <Axes: title={'center': 'Family_Size'}>, <Axes: >]], dtype=object)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
        "array([1, 0, 3, 4, 2, 5, 8])"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 136,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.560305Z",
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 137,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.722111Z",
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 138,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.730892Z",
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 139,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.762348Z",
@@ -1670,7 +1670,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 141,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.790159Z",
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 142,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:05.952651Z",
@@ -1911,7 +1911,7 @@
       "4    1\n",
       "5    1\n",
       "6    1\n",
-      "7    1\n",
+      "7    0\n",
       "8    0\n",
       "9    0\n",
       "dtype: int64\n"
@@ -1919,7 +1919,11 @@
     }
    ],
    "source": [
-    "best_model = LogisticRegression(random_state=42, max_iter=10000)\n",
+    "best_model = SVC(\n",
+    "        kernel=\"rbf\",     \n",
+    "        probability=True,\n",
+    "        random_state=42,\n",
+    "    )\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "y_val_pred = best_model.predict(X_val)\n",
@@ -1933,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1944,16 +1948,16 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.86      0.86       110\n",
-      "           1       0.78      0.78      0.78        69\n",
+      "           0       0.84      0.89      0.87       110\n",
+      "           1       0.81      0.74      0.77        69\n",
       "\n",
       "    accuracy                           0.83       179\n",
-      "   macro avg       0.82      0.82      0.82       179\n",
+      "   macro avg       0.83      0.82      0.82       179\n",
       "weighted avg       0.83      0.83      0.83       179\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[95 15]\n",
-      " [15 54]]\n"
+      "[[98 12]\n",
+      " [18 51]]\n"
      ]
     }
    ],
@@ -1969,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 144,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:06.926955Z",
